// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarOverlay > snapshot: IDLE state 1`] = `
<div>
  <div
    class="fixed bottom-6 right-6 z-50 flex flex-col items-center gap-1 select-none"
    data-state="IDLE"
    data-testid="avatar-overlay"
    style="opacity: 0; transform: translateY(20px) scale(0.8);"
  >
    <div
      class="w-20 h-20 drop-shadow-lg"
    >
      <svg
        aria-label="NexusAI avatar"
        fill="none"
        role="img"
        viewBox="0 0 200 200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="100"
          cy="100"
          fill="#0f3460"
          r="90"
        />
        <circle
          cx="100"
          cy="100"
          fill="none"
          r="90"
          stroke="#1a1a2e"
          stroke-width="4"
        />
        <ellipse
          cx="72"
          cy="85"
          fill="#e94560"
          rx="10"
          ry="12"
        />
        <ellipse
          cx="128"
          cy="85"
          fill="#e94560"
          rx="10"
          ry="12"
        />
        <path
          d="M58,65 Q72,60 86,65"
          stroke="#e94560"
          stroke-linecap="round"
          stroke-width="3"
        />
        <path
          d="M114,65 Q128,60 142,65"
          stroke="#e94560"
          stroke-linecap="round"
          stroke-width="3"
        />
        <g
          transform="translate(100, 130)"
        >
          <g
            data-active="false"
            data-testid="mouth-A"
            style="display: none;"
          >
            <path
              d="M-12,0 Q0,2 12,0 Q0,-2 -12,0"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-B"
            style="display: none;"
          >
            <path
              d="M-12,-4 Q0,8 12,-4"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-C"
            style="display: none;"
          >
            <path
              d="M-10,-2 Q0,5 10,-2"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-D"
            style="display: none;"
          >
            <path
              d="M-14,-6 Q0,12 14,-6"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-E"
            style="display: none;"
          >
            <path
              d="M-14,-5 L14,-5 Q14,8 0,8 Q-14,8 -14,-5"
              fill="#1a1a2e"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-F"
            style="display: none;"
          >
            <path
              d="M-12,-4 L12,-4 M-8,2 Q0,6 8,2"
              fill="#1a1a2e"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-G"
            style="display: none;"
          >
            <path
              d="M-8,-3 Q0,6 8,-3 Q0,-6 -8,-3"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-H"
            style="display: none;"
          >
            <path
              d="M-10,-4 Q0,10 10,-4 Q0,-8 -10,-4"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="true"
            data-testid="mouth-X"
            style="display: block;"
          >
            <path
              d="M-12,0 Q0,-3 12,0"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`AvatarOverlay > snapshot: PLAYING state with viseme B 1`] = `
<div>
  <div
    class="fixed bottom-6 right-6 z-50 flex flex-col items-center gap-1 select-none"
    data-state="PLAYING"
    data-testid="avatar-overlay"
    style="opacity: 0; transform: translateY(20px) scale(0.8);"
  >
    <div
      class="w-20 h-20 drop-shadow-lg"
    >
      <svg
        aria-label="NexusAI avatar"
        fill="none"
        role="img"
        viewBox="0 0 200 200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="100"
          cy="100"
          fill="#0f3460"
          r="90"
        />
        <circle
          cx="100"
          cy="100"
          fill="none"
          r="90"
          stroke="#1a1a2e"
          stroke-width="4"
        />
        <ellipse
          cx="72"
          cy="85"
          fill="#e94560"
          rx="10"
          ry="12"
        />
        <ellipse
          cx="128"
          cy="85"
          fill="#e94560"
          rx="10"
          ry="12"
        />
        <path
          d="M58,65 Q72,60 86,65"
          stroke="#e94560"
          stroke-linecap="round"
          stroke-width="3"
        />
        <path
          d="M114,65 Q128,60 142,65"
          stroke="#e94560"
          stroke-linecap="round"
          stroke-width="3"
        />
        <g
          transform="translate(100, 130)"
        >
          <g
            data-active="false"
            data-testid="mouth-A"
            style="display: none;"
          >
            <path
              d="M-12,0 Q0,2 12,0 Q0,-2 -12,0"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="true"
            data-testid="mouth-B"
            style="display: block;"
          >
            <path
              d="M-12,-4 Q0,8 12,-4"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-C"
            style="display: none;"
          >
            <path
              d="M-10,-2 Q0,5 10,-2"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-D"
            style="display: none;"
          >
            <path
              d="M-14,-6 Q0,12 14,-6"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-E"
            style="display: none;"
          >
            <path
              d="M-14,-5 L14,-5 Q14,8 0,8 Q-14,8 -14,-5"
              fill="#1a1a2e"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-F"
            style="display: none;"
          >
            <path
              d="M-12,-4 L12,-4 M-8,2 Q0,6 8,2"
              fill="#1a1a2e"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-G"
            style="display: none;"
          >
            <path
              d="M-8,-3 Q0,6 8,-3 Q0,-6 -8,-3"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-H"
            style="display: none;"
          >
            <path
              d="M-10,-4 Q0,10 10,-4 Q0,-8 -10,-4"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-X"
            style="display: none;"
          >
            <path
              d="M-12,0 Q0,-3 12,0"
              fill="none"
              stroke="#e94560"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
